--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,24 @@
-<div class="po-wrapper">
-  <po-toolbar p-title="AppName"></po-toolbar>
-
-  <po-menu [p-menus]="menus"></po-menu>
-
-  <po-page-default p-title="AppName">
-    <p>AppName page</p>
-  </po-page-default>
+<po-loading-overlay
+  [p-screen-lock]="false"
+  [hidden]="!isLoading"
+  p-text="Carregando dados..."
+></po-loading-overlay>
+<div class="po-wrapper mainDiv">
+  <po-toolbar
+    class="toolbar"
+    [p-title]="appTitle"
+    [p-profile]="profile"
+    [p-profile-actions]="profileActions"
+    [hidden]="!isLogged || isPublic"
+  >
+  </po-toolbar>
+  <po-menu
+    [p-filter]="true"
+    [p-logo]="logo"
+    [p-collapsed]="false"
+    [p-menus]="menu"
+    [hidden]="!isLogged || isPublic"
+  >
+  </po-menu>
+  <router-outlet [hidden]="!isLogged || isPublic"></router-outlet>
 </div>
