created movie forms and edit

--- a/src/app/page/movie/movie-list/movie-list.component.html
+++ b/src/app/page/movie/movie-list/movie-list.component.html
@@ -1,1 +1,11 @@
-<po-page-default p-title="Filmes" [p-actions]="pageActions"> </po-page-default>
+<po-page-list [p-title]="pageTitle" [p-actions]="actionsPage">
+  <po-table
+    [p-actions]="actionsGrid"
+    [p-columns]="columns"
+    [p-items]="resources"
+    [p-literals]="literals"
+    [p-striped]="true"
+    [p-sort]="true"
+  >
+  </po-table>
+</po-page-list>
