created login screen

--- a/src/app/page/auth/login/login.component.html
+++ b/src/app/page/auth/login/login.component.html
@@ -1,30 +1,31 @@
 <div class="base">
-  <div>
-    <img src="../../../../assets/background.jpg" class="background" />
-  </div>
-  <div class="login">
-    <po-input
-      class="input"
-      id="inputLogin"
-      [(ngModel)]="inputUser"
-      type="text"
-      placeholder="Usuário"
-      maxlength="20"
-      (keyup.enter)="submitLogin()"
-    ></po-input>
-    <po-input
-      class="input"
-      id="inputPassword"
-      [(ngModel)]="inputPassword"
-      type="password"
-      placeholder="Senha"
-      maxlength="20"
-      (keyup.enter)="submitLogin()"
-    ></po-input>
-    <po-button
-      class="button button-login"
-      p-label="Entrar"
-      (p-click)="submitLogin()"
-    ></po-button>
+  <div class="container">
+    <div class="login">
+      <div class="loginForm">
+        <po-input
+          class="input"
+          id="inputLogin"
+          [(ngModel)]="inputUser"
+          type="text"
+          placeholder="Usuário"
+          maxlength="20"
+          (keyup.enter)="submitLogin()"
+        ></po-input>
+        <po-input
+          class="input"
+          id="inputPassword"
+          [(ngModel)]="inputPassword"
+          type="password"
+          placeholder="Senha"
+          maxlength="20"
+          (keyup.enter)="submitLogin()"
+        ></po-input>
+        <po-button
+          class="button button-login"
+          p-label="Entrar"
+          (p-click)="submitLogin()"
+        ></po-button>
+      </div>
+    </div>
   </div>
 </div>
